# 2016-tfg-vanessa-fernandez

./: README.md
MEMORIA/: Capítulo 2.docx  Capítulo 3.docx  Capítulo 4.docx  Capítulo 5.docx  Capítulo 7.docx  Capítulo1.docx  Presentación.pptx
MEMORIA/Memoria/: 0-Acronimos.aux  0-Acronimos.tex  0-Agradecimientos.aux  0-Agradecimientos.tex  0-Portada.aux  0-Portada.tex  0-Resumen.aux  0-Resumen.tex  1-Introduccion.aux  1-Introduccion.tex  2-Objetivos.aux  2-Objetivos.tex  3-Infraestructura.aux  3-Infraestructura.tex  4-GPP.aux  4-GPP.tex  5-Roomba.aux  5-Roomba.tex  6-Autoparking.aux  6-Autoparking.tex  7-Conclusiones.aux  7-Conclusiones.tex  8-Bibliografia.aux  8-Bibliografia.tex  Memoria.acn  Memoria.acr  Memoria.aux  Memoria.bbl  Memoria.bib  Memoria.blg  Memoria.ist  Memoria.lof  Memoria.lot  Memoria.out  Memoria.tcp  Memoria.tex  Memoria.toc  Memoria.tps
Practices of robotics/color_filter/: MyAlgorithm.py  cameraserver_conf.cfg
Practices of robotics/follow_line/: MyAlgorithm.py  MyAlgorithm.py~  README.md  followLine.cfg  generateGUI
Practices of robotics/follow_turtlebot/: MyAlgorithm.py  color_tuner_conf.cfg  turtlebot.cfg
Practices of robotics/global_navigation/: MyAlgorithm.py  MyAlgorithm.py~  README.md  globalNavigation.py~  resources_rc.py  run_it.sh  taxiMap.conf
Practices of robotics/obstacle_avoidance/: MyAlgorithm.py  MyAlgorithm.py~  run_it.sh
Test/Aspiradora/: GrannyAnnie.world
Test/Stop_Practice/gazebo/models/cars/plugins/miniCar/: CMakeLists.txt  Makefile  cmake_install.cmake
Test/plugins/taxiLaser/: CMakeLists.txt  Makefile  cmake_install.cmake  taxiLaserMotors.cc
docs/: _config.yml  aboutme.md  index.html  index.md
(+145 files in other folders)
